Remove thusoy.com hard-coded cert name (NEEDS FIXUP FROM PREVIOUS)

--- a/salt/nginx/nginx.conf
+++ b/salt/nginx/nginx.conf
@@ -185,8 +185,8 @@ http {
     listen [::]:443 default_server ipv6only=off;
     server_name httpsbadsubdomain "";
     ssl on;
-    ssl_certificate ssl/www.thusoy.com.crt;
-    ssl_certificate_key private/www.thusoy.com.key;
+    ssl_certificate ssl/default.crt;
+    ssl_certificate_key private/default.key;
     return 444;
   }
 
