Remove plain HTTP on internal nginx

--- a/salt/nginx/nginx.conf
+++ b/salt/nginx/nginx.conf
@@ -1,3 +1,10 @@
+{% set nginx = pillar.get('nginx', {}) -%}
+{% set public = nginx.get('public', True) -%}
+
+####################################
+# File managed by salt state nginx #
+####################################
+
 # nginx Configuration File
 # http://wiki.nginx.org/Configuration
 
@@ -120,7 +127,7 @@ http {
 
   # Note that TLSv1.1 and TLSv1.2 are immune to the beast attack but only work with OpenSSL v1.0.1 and higher and has limited client support.
   # ciphersuite from https://wiki.mozilla.org/Security/Server_Side_TLS#Recommended_Ciphersuite
-  ssl_protocols              TLSv1 TLSv1.1 TLSv1.2;
+  ssl_protocols              {{ 'TLSv1 TLSv1.1 TLSv1.2' if public else 'TLSv1.2' }};
   ssl_ciphers                {{ ':'.join([
     'ECDHE-ECDSA-AES256-GCM-SHA384',
     'ECDHE-RSA-AES256-GCM-SHA384',
@@ -173,12 +180,14 @@ http {
   #ssl_certificate      /etc/nginx/default_ssl.crt;
   #ssl_certificate_key  /etc/nginx/default_ssl.key;
 
+  {% if public %}
   # Make sure bad subdomains return a 404 and not simply the first site if finds
   server {
     listen [::]:80 default_server ipv6only=off;
     server_name badsubdomainprobably "";
     return 444;
   }
+  {% endif %}
 
   # Make sure bad subdomains return 404 also for https connections
   server {
