--- a/salt/nginx/nginx.conf
+++ b/salt/nginx/nginx.conf
@@ -199,5 +199,8 @@ http {
     return 444;
   }
 
+  # Enable caching of proxy upstream responses
+  proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=proxy_upstream_cache:1m max_size=500m inactive=30m;
+
   include sites-enabled/*;
 }
