Write proxy upstream server error requests to own file

--- a/salt/nginx/nginx.conf
+++ b/salt/nginx/nginx.conf
@@ -33,6 +33,11 @@ error_log  /var/log/nginx/error.log warn;
 pid        /var/run/nginx.pid;
 
 http {
+    # Define which requests are to be error logged (that is, full request body dumped to log)
+    map $status $do_error_log {
+        ~^5 1; # Matches all HTTP statuses that start with 5
+        default 0;
+    }
 
   # Hide nginx version information.
   server_tokens off;
@@ -46,9 +51,22 @@ http {
                     '$status $body_bytes_sent "$http_referer" '
                     '"$http_user_agent" "$http_x_forwarded_for"';
 
+  # nginx doesn't have an easy way of logging all request headers (as I've found),
+  # thus extract the ones we know are present to see if there's a pattern somewhere.
+  # It might also be possible to use a map to map errors to set client_body_in_file_only
+  # to on if the request fails and log the body, but I'm not sure if that would have any
+  # performance impact on non-failing requests.
+  log_format error '$remote_addr [$time_local] $http_host $status $body_bytes_sent '
+                   '$http_accept_encoding $http_content_type $http_content_length '
+                   '$http_accept_language $http_accept $http_connection '
+                   '"$request_body"';
+
   # Default log file
   # (this is only used when you don't override access_log on a server{} level)
   access_log /var/log/nginx/access.log main;
+
+  # Custom error log
+  access_log /var/log/nginx/custom_error.log error if=$do_error_log;
 
   # How long to allow each connection to stay idle; longer values are better
   # for each individual client, particularly for SSL, but means that worker
