--- a/salt/nginx/nginx.conf
+++ b/salt/nginx/nginx.conf
@@ -48,8 +48,8 @@ http {
 
   # Format to use in log files
   log_format  main  '$remote_addr - $remote_user [$time_local] $http_host "$request" '
-                    '$status $body_bytes_sent "$http_referer" '
-                    '"$http_user_agent" "$http_x_forwarded_for"';
+                    '$status $body_bytes_sent $request_time $upstream_response_time '
+                    '"$http_referer" "$http_user_agent" "$http_x_forwarded_for"';
 
   # nginx doesn't have an easy way of logging all request headers (as I've found),
   # thus extract the ones we know are present to see if there's a pattern somewhere.
