Log cache hits to own file

--- a/salt/nginx/nginx.conf
+++ b/salt/nginx/nginx.conf
@@ -51,6 +51,9 @@ http {
                     '$status $body_bytes_sent $request_time $upstream_response_time '
                     '"$http_referer" "$http_user_agent" "$http_x_forwarded_for"';
 
+  log_format cache '$remote_addr [$time_local] $upstream_cache_status $http_host '
+                    '"$request" $body_bytes_sent';
+
   # nginx doesn't have an easy way of logging all request headers (as I've found),
   # thus extract the ones we know are present to see if there's a pattern somewhere.
   # It might also be possible to use a map to map errors to set client_body_in_file_only
@@ -64,6 +67,9 @@ http {
   # Default log file
   # (this is only used when you don't override access_log on a server{} level)
   access_log /var/log/nginx/access.log main;
+
+  # Cache log file
+  access_log /var/log/nginx/cache.log cache;
 
   # Custom error log
   access_log /var/log/nginx/custom_error.log error if=$do_error_log;
