Load target S3 bucket from pillar

--- a/salt/nginx/logrotate.conf
+++ b/salt/nginx/logrotate.conf
@@ -1,5 +1,6 @@
 {% set nginx = pillar.get('nginx', {}) -%}
 {% set dump_to_s3 = nginx.get('dump_to_s3', False) -%}
+{% set target_bucket = nginx.get('s3_bucket') %}
 
 /var/log/nginx/*.log {
     daily
@@ -26,7 +27,7 @@
             mv "$source_file" "$destination"
             gzip "$destination"
             filename="$(basename "$destination").gz"
-            s3-uploader "${destination}.gz" "megacool-logs-test/{{ grains.id }}/nginx/$filename" && rm "${destination}.gz"
+            s3-uploader "${destination}.gz" "{{ target_bucket }}/{{ grains.id }}/nginx/$filename" && rm "${destination}.gz"
         done
         {% endif %}
     endscript
