Fall back to systemctl if invoke-rc.d fails to rotate nginx logs

--- a/salt/nginx/logrotate.conf
+++ b/salt/nginx/logrotate.conf
@@ -17,7 +17,7 @@
     notifempty
     create 0640 nginx adm
     postrotate
-        invoke-rc.d nginx rotate >/dev/null 2>&1
+        (invoke-rc.d nginx rotate || systemctl kill nginx -s USR1) >/dev/null 2>&1
         {% if dump_to_s3 %}
         # Now we know that files have been reloaded by nginx and can be
         # compressed safely
