--- a/.editorconfig
+++ b/.editorconfig
@@ -17,3 +17,6 @@ insert_final_newline = true
 # Markdown uses trailing whitespace for features
 [*.md]
 trim_trailing_whitespace = false
+
+[*.patch]
+trim_trailing_whitespace = false
