Also error log 400 requests

--- a/salt/nginx/nginx.conf
+++ b/salt/nginx/nginx.conf
@@ -35,7 +35,7 @@ pid        /var/run/nginx.pid;
 http {
     # Define which requests are to be error logged (that is, full request body dumped to log)
     map $status $do_error_log {
-        ~^5 1; # Matches all HTTP statuses that start with 5
+        ~^[45] 1; # Matches all HTTP statuses that start with 4 or 5
         default 0;
     }
 
