Namespace spotify username/password
Should do the same for all extensions to enable them to be loaded
from pillar data.

--- a/salt/mopidy/mopidy.conf
+++ b/salt/mopidy/mopidy.conf
@@ -27,9 +27,9 @@ username =
 password =
 
 [spotify]
-enabled = true
-username = {{ mopidy.username }}
-password = {{ mopidy.password }}
+enabled = {{ 'true' if 'spotify' in mopidy else 'false' }}
+username = {{ mopidy.spotify.username }}
+password = {{ mopidy.spotify.password }}
 bitrate = 160
 volume_normalization = true
 private_session = true
