Enable loading mopidy local media

--- a/salt/mopidy/mopidy.conf
+++ b/salt/mopidy/mopidy.conf
@@ -94,9 +94,9 @@ follow_symlinks = false
 metadata_timeout = 1000
 
 [local]
-enabled = false  ; Extension disabled due to config errors.
+enabled = {{ 'true' if 'local' in mopidy else 'false' }}
 library = json
-media_dir =  ; Must be set.
+media_dir = {{ mopidy.local.media_dir }}
 scan_timeout = 1000
 scan_flush_threshold = 100
 scan_follow_symlinks = false
