Use correct syntax for dict access in jinja

--- a/salt/mopidy/mopidy.conf
+++ b/salt/mopidy/mopidy.conf
@@ -28,8 +28,8 @@ password =
 
 [spotify]
 enabled = {{ 'true' if 'spotify' in mopidy else 'false' }}
-username = {{ mopidy.spotify.username }}
-password = {{ mopidy.spotify.password }}
+username = {{ mopidy['spotify']['username'] }}
+password = {{ mopidy['spotify']['password'] }}
 bitrate = 160
 volume_normalization = true
 private_session = true
@@ -96,7 +96,7 @@ metadata_timeout = 1000
 [local]
 enabled = {{ 'true' if 'local' in mopidy else 'false' }}
 library = json
-media_dir = {{ mopidy.local.media_dir }}
+media_dir = {{ mopidy['local']['media_dir'] }}
 scan_timeout = 1000
 scan_flush_threshold = 100
 scan_follow_symlinks = false
