Don't fail modify.conf on missing pillar values

--- a/salt/mopidy/mopidy.conf
+++ b/salt/mopidy/mopidy.conf
@@ -1,4 +1,5 @@
 {% set mopidy = pillar.get('mopidy', {}) -%}
+{% set pillar_get = salt['pillar.get'] -%}
 
 [core]
 cache_dir = $XDG_CACHE_DIR/mopidy
@@ -28,8 +29,8 @@ password =
 
 [spotify]
 enabled = {{ 'true' if 'spotify' in mopidy else 'false' }}
-username = {{ mopidy['spotify']['username'] }}
-password = {{ mopidy['spotify']['password'] }}
+username = {{ pillar_get('mopidy:spotify:username', '') }}
+password = {{ pillar_get('mopidy:spotify:password', '') }}
 bitrate = 160
 volume_normalization = true
 private_session = true
@@ -96,7 +97,7 @@ metadata_timeout = 1000
 [local]
 enabled = {{ 'true' if 'local' in mopidy else 'false' }}
 library = json
-media_dir = {{ mopidy['local']['media_dir'] }}
+media_dir = {{ pillar_get('mopidy:local:media_dir', '') }}
 scan_timeout = 1000
 scan_flush_threshold = 100
 scan_follow_symlinks = false
