Allow specifying owncloud upload tmp dir
Useful for systems with /tmp mounted in memory.

--- a/salt/owncloud/php.ini
+++ b/salt/owncloud/php.ini
@@ -788,7 +788,12 @@ file_uploads = On
 ; Temporary directory for HTTP uploaded files (will use system default if not
 ; specified).
 ; http://php.net/upload-tmp-dir
+{% set upload_tmp_dir = salt['pillar.get']('owncloud:upload_tmp_dir') -%}
+{% if upload_tmp_dir -%}
+upload_tmp_dir = "{{ upload_tmp_dir }}"
+{% else -%}
 ;upload_tmp_dir =
+{% endif %}
 
 ; Maximum allowed size for uploaded files.
 ; http://php.net/upload-max-filesize
