Update powerdns module path for jessie
Seems very weird, but that's where pdns-backend-pdns puts the module.

--- a/salt/powerdns/pdns.conf
+++ b/salt/powerdns/pdns.conf
@@ -149,7 +149,10 @@ master=yes
 #################################
 # module-dir    Default directory for modules
 #
-module-dir=/usr/lib/powerdns
+#module-dir=/usr/lib/powerdns
+# TODO: This seems to be where modules are saved on jessie
+module-dir=/usr/lib/x86_64-linux-gnu/pdns/
+
 
 #################################
 # negquery-cache-ttl    Seconds to store packets in the PacketCache
