--- a/salt/powerdns/pdns.conf
+++ b/salt/powerdns/pdns.conf
@@ -149,10 +149,11 @@ master=yes
 #################################
 # module-dir    Default directory for modules
 #
-#module-dir=/usr/lib/powerdns
-# TODO: This seems to be where modules are saved on jessie
+{% if grains.oscodename in ('jessie',) -%}
 module-dir=/usr/lib/x86_64-linux-gnu/pdns/
-
+{% else -%}
+module-dir=/usr/lib/powerdns
+{%- endif %}
 
 #################################
 # negquery-cache-ttl    Seconds to store packets in the PacketCache
