--- a/salt/nginx/nginx.conf
+++ b/salt/nginx/nginx.conf
@@ -191,17 +191,18 @@ http {
   # Set ephemeral DH key parameters to a larger size than default (default 1024)
   ssl_dhparam ssl/dhparam.pem;
 
-  # Optimize SSL by caching session parameters for 10 minutes. This cuts down on the number of expensive SSL handshakes.
+  # This default SSL certificate will be served whenever the client lacks support for SNI (Server Name Indication).
+  # Make it a symlink to the most important certificate you have, so that users of IE 8 and below on WinXP can see your main site without SSL errors.
+  ssl_certificate      ssl/default.crt;
+  ssl_certificate_key  private/default.key;
+
+  # Optimize SSL by caching session parameters. This cuts down on the number of expensive SSL handshakes.
   # The handshake is the most CPU-intensive operation, and by default it is re-negotiated on every new/parallel connection.
   # By enabling a cache (of type "shared between all Nginx workers"), we tell the client to re-use the already negotiated state.
   # Further optimization can be achieved by raising keepalive_timeout, but that shouldn't be done unless you serve primarily HTTPS.
-  ssl_session_cache    shared:SSL:10m; # a 1mb cache can hold about 4000 sessions, so we can hold 40000 sessions
-  ssl_session_timeout  10m;
-
-  # This default SSL certificate will be served whenever the client lacks support for SNI (Server Name Indication).
-  # Make it a symlink to the most important certificate you have, so that users of IE 8 and below on WinXP can see your main site without SSL errors.
-  #ssl_certificate      /etc/nginx/default_ssl.crt;
-  #ssl_certificate_key  /etc/nginx/default_ssl.key;
+  # A 1mb cache can hold about 4000 sessions.
+  ssl_session_cache    shared:SSL:{{ nginx.ssl_cache_size }};
+  ssl_session_timeout  {{ nginx.ssl_session_timeout }};
 
   # Make sure bad subdomains return a 404 and not simply the first site if finds
   server {
