Add uwsgi cache params mirroring proxy cache

--- a/salt/nginx/nginx.conf
+++ b/salt/nginx/nginx.conf
@@ -221,8 +221,9 @@ http {
     return 444;
   }
 
-  # Enable caching of proxy upstream responses
+  # Enable caching of proxy and uwsgi upstream responses
   proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=proxy_upstream_cache:1m max_size=500m inactive=30m;
+  uwsgi_cache_path /var/cache/nginx levels=1:2 keys_zone=uwsgi_upstream_cache:1m max_size=500m inactive=30m;
 
   include sites-enabled/*;
 }
