Split cache directories for proxy and uwsg

--- a/salt/nginx/nginx.conf
+++ b/salt/nginx/nginx.conf
@@ -222,8 +222,9 @@ http {
   }
 
   # Enable caching of proxy and uwsgi upstream responses
-  proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=proxy_upstream_cache:1m max_size=500m inactive=30m;
-  uwsgi_cache_path /var/cache/nginx levels=1:2 keys_zone=uwsgi_upstream_cache:1m max_size=500m inactive=30m;
+  {% for cache_target in ('proxy', 'uwsgi') %}
+  {{ cache_target }}_cache_path /var/cache/nginx/{{ cache_target }} levels=1:2 keys_zone={{ cache_target }}_upstream_cache:1m max_size=500m inactive=30m;
+  {% endfor %}
 
   include sites-enabled/*;
 }
