Remove leading newlines in nginx logrotate config

--- a/salt/nginx/logrotate.conf
+++ b/salt/nginx/logrotate.conf
@@ -1,6 +1,6 @@
 {% set nginx = pillar.get('nginx', {}) -%}
 {% set dump_to_s3 = nginx.get('dump_to_s3', False) -%}
-{% set target_bucket = nginx.get('s3_bucket') %}
+{% set target_bucket = nginx.get('s3_bucket') -%}
 
 /var/log/nginx/*.log {
     daily
