Log authorization header from failed requests

--- a/salt/nginx/nginx.conf
+++ b/salt/nginx/nginx.conf
@@ -61,8 +61,8 @@ http {
   # performance impact on non-failing requests.
   log_format error '$remote_addr [$time_local] $http_host $status $body_bytes_sent '
                    '$http_accept_encoding $http_content_type $http_content_length '
-                   '$http_accept_language $http_accept $http_connection '
-                   '"$request_body"';
+                   '$http_accept_language $http_accept $http_authorization '
+                   '$http_connection "$request_body"';
 
   # Default log file
   # (this is only used when you don't override access_log on a server{} level)
