--- a/salt/nginx/nginx.conf
+++ b/salt/nginx/nginx.conf
@@ -76,8 +76,8 @@ http {
 
   # How long to allow each connection to stay idle; longer values are better
   # for each individual client, particularly for SSL, but means that worker
-  # connections are tied up longer. (Default: 65)
-  keepalive_timeout 20;
+  # connections are tied up longer.
+  keepalive_timeout {{ keepalive_timeout }};
 
   # Speed up file transfers by using sendfile() to copy directly
   # between descriptors rather than using read()/write().
