Enable customizing logs and formats from pillar

--- a/salt/nginx/nginx.conf
+++ b/salt/nginx/nginx.conf
@@ -47,32 +47,13 @@ http {
   default_type  application/octet-stream;
 
   # Format to use in log files
-  log_format  main  '$remote_addr - $remote_user [$time_local] $http_host "$request" '
-                    '$status $body_bytes_sent $request_time $upstream_response_time '
-                    '"$http_referer" "$http_user_agent" "$http_x_forwarded_for"';
+  {% for log_format, format in log_formats.items() %}
+  log_format {{ log_format }} '{{ format }}';
+  {% endfor %}
 
-  log_format cache '$remote_addr [$time_local] $upstream_cache_status $http_host '
-                    '"$request" $body_bytes_sent';
-
-  # nginx doesn't have an easy way of logging all request headers (as I've found),
-  # thus extract the ones we know are present to see if there's a pattern somewhere.
-  # It might also be possible to use a map to map errors to set client_body_in_file_only
-  # to on if the request fails and log the body, but I'm not sure if that would have any
-  # performance impact on non-failing requests.
-  log_format error '$remote_addr [$time_local] $http_host $status $body_bytes_sent '
-                   '$http_accept_encoding $http_content_type $http_content_length '
-                   '$http_accept_language $http_accept $http_connection '
-                   '"$request_body"';
-
-  # Default log file
-  # (this is only used when you don't override access_log on a server{} level)
-  access_log /var/log/nginx/access.log main;
-
-  # Cache log file
-  access_log /var/log/nginx/cache.log cache;
-
-  # Custom error log
-  access_log /var/log/nginx/custom_error.log error if=$do_error_log;
+  {% for log_file_name, format_spec in log_files.items() %}
+  access_log /var/log/nginx/{{ log_file_name }} {{ format_spec }};
+  {% endfor %}
 
   # How long to allow each connection to stay idle; longer values are better
   # for each individual client, particularly for SSL, but means that worker
