Enable customizing the http block from pillar

--- a/salt/nginx/nginx.conf
+++ b/salt/nginx/nginx.conf
@@ -33,11 +33,12 @@ error_log  /var/log/nginx/error.log warn;
 pid        /var/run/nginx.pid;
 
 http {
-    # Define which requests are to be error logged (that is, full request body dumped to log)
-    map $status $do_error_log {
-        ~^[45] 1; # Matches all HTTP statuses that start with 4 or 5
-        default 0;
-    }
+
+  {% for extra_http_dict in (extra_http or {}) %}
+  {% for key, value in extra_http_dict.items() %}
+  {{ key }} {{ value }}
+  {% endfor %}
+  {% endfor %}
 
   # Hide nginx version information.
   server_tokens off;
