Move local pgsql config to dedicate file
Ensures the defaults written to that file by apt when installing the
package is overwritten (debian).

--- a/salt/powerdns/pdns.conf
+++ b/salt/powerdns/pdns.conf
@@ -198,12 +198,7 @@ include-dir=/etc/powerdns/pdns.d
 #################################
 # launch    Which backends to launch and order to query them in
 #
-launch=gpgsql
-gpgsql-host={{ pillar['postgres.host'] }}
-gpgsql-user=pdns
-gpgsql-password={{ powerdns.db_password }}
-gpgsql-dbname=powerdns
-gpgsql-dnssec=yes
+launch=
 
 #################################
 # load-modules  Load this module - supply absolute or relative path
