Enable allowing dnsupdate to pdns

--- a/salt/powerdns/pdns.conf
+++ b/salt/powerdns/pdns.conf
@@ -167,7 +167,7 @@ disable-axfr={{ 'yes' if powerdns.get('disable_axfr') else 'no' }}
 #################################
 # experimental-dnsupdate    Enable/Disable DNS update (RFC2136) support. Default is no.
 #
-# experimental-dnsupdate=no
+experimental-dnsupdate={{ 'yes' if powerdns.get('dnsupdate', False) else 'no' }}
 
 #################################
 # experimental-json-interface   If the webserver should serve JSON data
