--- a/salt/powerdns/pdns.conf
+++ b/salt/powerdns/pdns.conf
@@ -5,6 +5,11 @@
 #######################################
 
 #################################
+# 8bit-dns  Allow 8bit dns queries
+#
+# 8bit-dns=no
+
+#################################
 # allow-axfr-ips    Allow zonetransfers only to these subnets
 #
 allow-axfr-ips={{ ' '.join(powerdns.get('allow_axfr_ips', [])) }}
@@ -15,9 +20,24 @@ allow-axfr-ips={{ ' '.join(powerdns.get('allow_axfr_ips', [])) }}
 allow-dnsupdate-from={{ ','.join(powerdns.get('allow_dnsupdate_from', [])) }}
 
 #################################
+# allow-notify-from Allow AXFR NOTIFY from these IP ranges. If empty, drop all incoming notifies.
+#
+# allow-notify-from=0.0.0.0/0,::/0
+
+#################################
 # allow-recursion   List of subnets that are allowed to recurse
 #
 # allow-recursion=127.0.0.1
+
+#################################
+# allow-unsigned-notify Allow unsigned notifications for TSIG secured domains
+#
+# allow-unsigned-notify=yes
+
+#################################
+# allow-unsigned-supermaster    Allow supermasters to create zones without TSIG signed NOTIFY
+#
+# allow-unsigned-supermaster=yes
 
 #################################
 # also-notify   When notifying a domain, also notify these nameservers
@@ -28,6 +48,26 @@ allow-dnsupdate-from={{ ','.join(powerdns.get('allow_dnsupdate_from', [])) }}
 # any-to-tcp    Answer ANY queries with tc=1, shunting to TCP
 #
 # any-to-tcp=no
+
+#################################
+# api   Enable/disable the REST API
+#
+# api=no
+
+#################################
+# api-key   Static pre-shared authentication key for access to the REST API
+#
+# api-key=
+
+#################################
+# api-logfile   Location of the server logfile (used by the REST API)
+#
+# api-logfile=/var/log/pdns.log
+
+#################################
+# api-readonly  Disallow data modification through the REST API when set
+#
+# api-readonly=no
 
 #################################
 # cache-ttl Seconds to store packets in the PacketCache
@@ -77,12 +117,22 @@ daemon=yes
 #################################
 # default-ksk-algorithms    Default KSK algorithms
 #
-# default-ksk-algorithms=rsasha256
+# default-ksk-algorithms=ecdsa256
 
 #################################
 # default-ksk-size  Default KSK size (0 means default)
 #
 # default-ksk-size=0
+
+#################################
+# default-soa-edit  Default SOA-EDIT value
+#
+# default-soa-edit=
+
+#################################
+# default-soa-edit-signed   Default SOA-EDIT value for signed zones
+#
+# default-soa-edit-signed=
 
 #################################
 # default-soa-mail  mail address to insert in the SOA record if none set in the backend
@@ -125,6 +175,11 @@ disable-axfr={{ 'yes' if powerdns.get('disable_axfr') else 'no' }}
 # disable-axfr-rectify=no
 
 #################################
+# disable-syslog    Disable logging to syslog, useful when running inside a supervisor that logs stdout
+#
+# disable-syslog=no
+
+#################################
 # disable-tcp   Do not listen to TCP queries
 #
 # disable-tcp=no
@@ -135,9 +190,29 @@ disable-axfr={{ 'yes' if powerdns.get('disable_axfr') else 'no' }}
 # distributor-threads=3
 
 #################################
+# dname-processing  If we should support DNAME records
+#
+# dname-processing=no
+
+#################################
+# dnssec-key-cache-ttl  Seconds to cache DNSSEC keys from the database
+#
+# dnssec-key-cache-ttl=30
+
+#################################
+# dnsupdate Enable/Disable DNS update (RFC2136) support. Default is no.
+#
+dnsupdate={{ 'yes' if powerdns.get('dnsupdate', False) else 'no' }}
+
+#################################
 # do-ipv6-additional-processing Do AAAA additional processing
 #
 # do-ipv6-additional-processing=yes
+
+#################################
+# domain-metadata-cache-ttl Seconds to cache domain metadata from the database
+#
+# domain-metadata-cache-ttl=60
 
 #################################
 # edns-subnet-processing    If we should act on EDNS Subnet options
@@ -150,34 +225,9 @@ disable-axfr={{ 'yes' if powerdns.get('disable_axfr') else 'no' }}
 # entropy-source=/dev/urandom
 
 #################################
-# experimental-api-key  REST API Static authentication key (required for API use)
+# experimental-lua-policy-script    Lua script for the policy engine
 #
-# experimental-api-key=
-
-#################################
-# experimental-api-readonly If the JSON API should disallow data modification
-#
-# experimental-api-readonly=no
-
-#################################
-# experimental-dname-processing If we should support DNAME records
-#
-# experimental-dname-processing=no
-
-#################################
-# experimental-dnsupdate    Enable/Disable DNS update (RFC2136) support. Default is no.
-#
-experimental-dnsupdate={{ 'yes' if powerdns.get('dnsupdate', False) else 'no' }}
-
-#################################
-# experimental-json-interface   If the webserver should serve JSON data
-#
-# experimental-json-interface=no
-
-#################################
-# experimental-logfile  Filename of the log file for JSON parser
-#
-# experimental-logfile=/var/log/pdns.log
+# experimental-lua-policy-script=
 
 #################################
 # forward-dnsupdate A global setting to allow DNS update packages that are for a Slave domain, to be forwarded to the master.
@@ -251,7 +301,7 @@ log-dns-queries
 # loglevel=4
 
 #################################
-# lua-prequery-script   Lua script with prequery handler
+# lua-prequery-script   Lua script with prequery handler (DO NOT USE)
 #
 # lua-prequery-script=
 
@@ -288,7 +338,7 @@ master=yes
 #################################
 # max-tcp-connections   Maximum number of TCP connections
 #
-# max-tcp-connections=10
+# max-tcp-connections=20
 
 #################################
 # module-dir    Default directory for modules
@@ -311,6 +361,11 @@ module-dir=/usr/lib/powerdns
 # no-shuffle=off
 
 #################################
+# non-local-bind    Enable binding to non-local addresses by using FREEBIND / BINDANY socket options
+#
+# non-local-bind=no
+
+#################################
 # only-notify   Only send AXFR NOTIFY to these IP addresses or netmasks
 #
 # only-notify=0.0.0.0/0,::/0
@@ -321,14 +376,14 @@ module-dir=/usr/lib/powerdns
 # out-of-zone-additional-processing=yes
 
 #################################
+# outgoing-axfr-expand-alias    Expand ALIAS records during outgoing AXFR
+#
+# outgoing-axfr-expand-alias=no
+
+#################################
 # overload-queue-length Maximum queuelength moving to packetcache only
 #
 # overload-queue-length=0
-
-#################################
-# pipebackend-abi-version   Version of the pipe backend ABI
-#
-# pipebackend-abi-version=1
 
 #################################
 # prevent-self-notification Don't send notifications to what we think is ourself
@@ -391,11 +446,6 @@ module-dir=/usr/lib/powerdns
 # security-poll-suffix=secpoll.powerdns.com.
 
 #################################
-# send-root-referral    Send out old-fashioned root-referral instead of ServFail in case of no authority
-#
-# send-root-referral=no
-
-#################################
 # server-id Returned when queried for 'server.id' TXT or NSID, defaults to hostname - disabled or custom
 #
 # server-id=
@@ -421,7 +471,7 @@ setuid=pdns
 # slave=no
 
 #################################
-# slave-cycle-interval  Reschedule failed SOA serial checks once every .. seconds
+# slave-cycle-interval  Schedule slave freshness checks once every .. seconds
 #
 # slave-cycle-interval=60
 
@@ -451,9 +501,9 @@ setuid=pdns
 # soa-retry-default=3600
 
 #################################
-# socket-dir    Where the controlsocket will live
+# socket-dir    Where the controlsocket will live, /var/run when unset and not chrooted
 #
-socket-dir=/var/run
+# socket-dir=
 
 #################################
 # tcp-control-address   If set, PowerDNS can be controlled over TCP on this address
@@ -524,3 +574,13 @@ version-string=powerdns
 # webserver-print-arguments If the webserver should print arguments
 #
 # webserver-print-arguments=no
+
+#################################
+# write-pid Write a PID file
+#
+# write-pid=yes
+
+#################################
+# xfr-max-received-mbytes   Maximum number of megabytes received from an incoming XFR
+#
+# xfr-max-received-mbytes=100
