Enable setting allow-dnsupdate-from

--- a/salt/powerdns/pdns.conf
+++ b/salt/powerdns/pdns.conf
@@ -12,7 +12,7 @@ allow-axfr-ips={{ ' '.join(powerdns.get('allow_axfr_ips', [])) }}
 #################################
 # allow-dnsupdate-from  A global setting to allow DNS updates from these IP ranges.
 #
-# allow-dnsupdate-from=127.0.0.0/8,::1
+allow-dnsupdate-from={{ ','.join(powerdns.get('allow_dnsupdate_from', [])) }}
 
 #################################
 # allow-recursion   List of subnets that are allowed to recurse
