Refactor postgres state
Adds apt repo to enable installing 9.5, adds internal pillar flag to
separate between shared and local databases, adds firewall rules, and
moves regular backups to a sub-state.

--- a/salt/postgres/pg_hba.conf
+++ b/salt/postgres/pg_hba.conf
@@ -1,3 +1,7 @@
+################################################
+# File managed by salt state postgresql.server #
+################################################
+
 # PostgreSQL Client Authentication Configuration File
 # ===================================================
 #
@@ -89,9 +93,17 @@ local   all             postgres                                peer
 # "local" is for Unix domain socket connections only
 local   all             all                                     password
 # IPv4 local connections:
-host    all             all             127.0.0.1/32            password
-# IPv6 local connections:
-host    all             all             ::1/128                 password
+{% if not internal %}
+hostssl all             all             0.0.0.0/0               md5
+hostssl all             all             ::/0                    md5
+
+{% if cert_auth %}
+hostssl all             all             0.0.0.0/0               cert
+hostssl all             all             ::/0                    cert
+{% endif %}
+
+{% endif %}
+
 # Allow replication connections from localhost, by a user with the
 # replication privilege.
 #local   replication     postgres                                peer
