--- a/salt/postgres/pg_hba.conf
+++ b/salt/postgres/pg_hba.conf
@@ -93,7 +93,10 @@ local   all             postgres                                peer
 # "local" is for Unix domain socket connections only
 local   all             all                                     password
 # IPv4 local connections:
-{% if not internal %}
+{% if internal %}
+host all                all             127.0.0.1               md5
+host all                all             ::1                     md5
+{% else %}
 hostssl all             all             0.0.0.0/0               md5
 hostssl all             all             ::/0                    md5
 
