--- a/salt/postgres/pg_hba.conf
+++ b/salt/postgres/pg_hba.conf
@@ -94,8 +94,8 @@ local   all             postgres                                peer
 local   all             all                                     password
 # IPv4 local connections:
 {% if internal %}
-host all                all             127.0.0.1               md5
-host all                all             ::1                     md5
+host all                all             127.0.0.1/32            md5
+host all                all             ::1/128                 md5
 {% else %}
 hostssl all             all             0.0.0.0/0               md5
 hostssl all             all             ::/0                    md5
