--- a/salt/postgres/postgresql.conf
+++ b/salt/postgres/postgresql.conf
@@ -152,7 +152,7 @@ dynamic_shared_memory_type = posix	# the default is the first option
 
 #max_files_per_process = 1000		# min 25
 					# (change requires restart)
-#shared_preload_libraries = ''		# (change requires restart)
+#shared_preload_libraries = '{{ ','.join(postgres.get('shared_preload_libraries', []) }}'		# (change requires restart)
 
 # - Cost-Based Vacuum Delay -
 
