--- a/salt/nginx/nginx.conf
+++ b/salt/nginx/nginx.conf
@@ -186,6 +186,7 @@ http {
     return 444;
   }
 
+  {% if add_default_https %}
   # Make sure bad subdomains return 404 also for https connections
   server {
     listen [::]:443 default_server ipv6only=off;
@@ -195,6 +196,7 @@ http {
     ssl_certificate_key private/default.key;
     return 444;
   }
+  {% endif %}
 
   # Enable caching of proxy upstream responses
   proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=proxy_upstream_cache:1m max_size=500m inactive=30m;
