nginx: Enable not configuring default http site

--- a/salt/nginx/nginx.conf
+++ b/salt/nginx/nginx.conf
@@ -180,11 +180,13 @@ http {
   #ssl_certificate_key  /etc/nginx/default_ssl.key;
 
   # Make sure bad subdomains return a 404 and not simply the first site if finds
+  {% if add_default_http %}
   server {
     listen [::]:80 default_server ipv6only=off;
     server_name badsubdomainprobably "";
     return 444;
   }
+  {% endif %}
 
   {% if add_default_https %}
   # Make sure bad subdomains return 404 also for https connections
