Add mopidy extension client id/secret to config

--- a/salt/mopidy/mopidy.conf
+++ b/salt/mopidy/mopidy.conf
@@ -31,6 +31,8 @@ password =
 enabled = {{ 'true' if 'spotify' in mopidy else 'false' }}
 username = {{ pillar_get('mopidy:spotify:username', '') }}
 password = {{ pillar_get('mopidy:spotify:password', '') }}
+client_id = {{ pillar_get('mopidy:spotify:client_id', '') }}
+client_secret = {{ pillar_get('mopidy:spotify:client_secret', '') }}
 bitrate = 160
 volume_normalization = true
 private_session = true
