--- a/salt/nginx/nginx.conf
+++ b/salt/nginx/nginx.conf
@@ -63,6 +63,10 @@ http {
   access_log /var/log/nginx/{{ log_file_name }} {{ format_spec }};
   {% endfor %}
 
+  {% for log_output in log_outputs %}
+  {{ log_output.logger }} {{ log_output.spec }} {{ log_output.format }};
+  {% endfor %}
+
   # How long to allow each connection to stay idle; longer values are better
   # for each individual client, particularly for SSL, but means that worker
   # connections are tied up longer.
