Trim some whitespace from rsyslog.conf

--- a/salt/rsyslog/rsyslog.conf
+++ b/salt/rsyslog/rsyslog.conf
@@ -130,6 +130,6 @@ daemon.*;mail.*;\
     *.=notice;*.=warn   |/dev/xconsole
 
 
-{% for output in salt['pillar.get']('rsyslog:outputs', []) %}
+{% for output in salt['pillar.get']('rsyslog:outputs', []) -%}
 {{ output }}
 {% endfor %}
