Remove jessie-specific override in pdns.conf

--- a/salt/powerdns/pdns.conf
+++ b/salt/powerdns/pdns.conf
@@ -294,7 +294,7 @@ master=yes
 #################################
 # module-dir    Default directory for modules
 #
-{% if grains.oscodename in ('jessie',) -%}
+{% if grains.os_family in ('Debian',) -%}
 module-dir=/usr/lib/x86_64-linux-gnu/pdns/
 {% else -%}
 module-dir=/usr/lib/powerdns
