Fix deprecated "ssl on" statement

--- a/salt/nginx/nginx.conf
+++ b/salt/nginx/nginx.conf
@@ -195,9 +195,8 @@ http {
   {% if add_default_https %}
   # Make sure bad subdomains return 404 also for https connections
   server {
-    listen [::]:443 default_server ipv6only=off;
+    listen [::]:443 default_server ipv6only=off ssl;
     server_name httpsbadsubdomain "";
-    ssl on;
     ssl_certificate ssl/default.crt;
     ssl_certificate_key private/default.key;
     return 444;
