--- a/salt/nginx/nginx.conf
+++ b/salt/nginx/nginx.conf
@@ -20,6 +20,13 @@ worker_processes auto;
 # should be > worker_connections.
 worker_rlimit_nofile 8192;
 
+{% if modules -%}
+# Load extension modules
+{% for module in modules -%}
+load_module {{ module }};
+{% endfor %}
+{% endif -%}
+
 events {
   # When you need > 8000 * cpu_cores connections, you start optimizing your OS,
   # and this is probably the point at where you hire people who are smarter than
