Finish honeytail state

--- a/salt/honeytail/honeytail.conf
+++ b/salt/honeytail/honeytail.conf
@@ -1,6 +1,12 @@
+{% set honeytail = pillar.get('honeytail', {}) -%}
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+; File managed by salt state honeytail ;
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+
 [Application Options]
 ; Only send 1 / N log lines
-; SampleRate = 1
+SampleRate = {{ honeytail.get('sample_rate', 1) }}
 
 ; Number of concurrent connections to open to Honeycomb
 ; NumSenders = 80
@@ -69,7 +75,7 @@ AddFields = host={{ grains.id }}
 ; DeterministicSample =
 
 ; enable dynamic sampling using the field listed in this option. May be specified multiple times; fields will be concatenated to form the dynsample key. WARNING increases CPU utilization dramatically over normal sampling
-{% if honeytail.dynsample %}
+{% if 'dynsample' in honeytail %}
 DynSample = {{ honeytail.dynsample }}
 {% endif %}
 
@@ -135,9 +141,12 @@ Dataset = {{ honeytail.dataset }}
 ; Format of the timestamp found in timefield (supports strftime and Golang time formats)
 ; TimeFieldFormat =
 
+{% set keyval = honeytail.get('keyval', {}) %}
 [KeyVal Parser Options]
 ; Name of the field that contains a timestamp
-TimeFieldName = {{ honeytail.keyval.time_field_name }}
+{% if 'time_field_name' in keyval -%}
+TimeFieldName = {{ keyval.time_field_name }}
+{% endif %}
 
 ; Format of the timestamp found in timefield (supports strftime and Golang time formats)
 ; TimeFieldFormat =
