Enable toggling debug out

--- a/salt/honeytail/honeytail.conf
+++ b/salt/honeytail/honeytail.conf
@@ -21,7 +21,7 @@ SampleRate = {{ honeytail.get('sample_rate', 1) }}
 ; Debug = false
 
 ; Instead of sending events to Honeycomb, print them to STDOUT for debugging
-DebugOut = true
+DebugOut = {{ 'true' if honeytail.get('debug') else 'false' }}
 
 ; How frequently, in seconds, to print out summary info
 ; StatusInterval = 60
