Make dynsample a list

--- a/salt/honeytail/honeytail.conf
+++ b/salt/honeytail/honeytail.conf
@@ -75,9 +75,9 @@ AddFields = host={{ grains.id }}
 ; DeterministicSample =
 
 ; enable dynamic sampling using the field listed in this option. May be specified multiple times; fields will be concatenated to form the dynsample key. WARNING increases CPU utilization dramatically over normal sampling
-{% if 'dynsample' in honeytail %}
-DynSample = {{ honeytail.dynsample }}
-{% endif %}
+{% for sample_key in honeytail.get('dynsample', []) -%}
+DynSample = {{ sample_key }}
+{% endfor %}
 
 ; measurement window size for the dynsampler, in seconds
 ; DynWindowSec = 30
