honeytail: Rename host->hostname to prevent conflict

--- a/salt/honeytail/honeytail.conf
+++ b/salt/honeytail/honeytail.conf
@@ -45,7 +45,7 @@ DebugOut = {{ 'true' if honeytail.get('debug') else 'false' }}
 ; DropFields =
 
 ; Add the field to every event. Field should be key=val. May be specified multiple times
-AddFields = host={{ grains.id }}
+AddFields = hostname={{ grains.id }}
 
 ; Data Augmentation Map file. Path to a file that contains JSON mapping of columns to augment, the values of the column, and new objects to be inserted into the event, eg to add hostname based on IP address or username based on user ID
 ; DAMapFile =
