honeytail: Enable including arbitrary grains

--- a/salt/honeytail/honeytail.conf
+++ b/salt/honeytail/honeytail.conf
@@ -46,6 +46,9 @@ DebugOut = {{ 'true' if honeytail.get('debug') else 'false' }}
 
 ; Add the field to every event. Field should be key=val. May be specified multiple times
 AddFields = hostname={{ grains.id }}
+{% for grain in honeytail.get('add_grains', []) -%}
+AddFields = {{ grain }}={{ grains[grain] }}
+{% endfor %}
 
 ; Data Augmentation Map file. Path to a file that contains JSON mapping of columns to augment, the values of the column, and new objects to be inserted into the event, eg to add hostname based on IP address or username based on user ID
 ; DAMapFile =
