honeytail: Enable setting request shape

--- a/salt/honeytail/honeytail.conf
+++ b/salt/honeytail/honeytail.conf
@@ -54,7 +54,9 @@ AddFields = {{ grain }}={{ grains[grain] }}
 ; DAMapFile =
 
 ; Identify a field that contains an HTTP request of the form 'METHOD /path HTTP/1.x' or just the request path. Break apart that field into subfields that contain components. May be specified multiple times. Defaults to 'request' when using the nginx parser
-; RequestShape =
+{% if 'request_shape' in honeytail %}
+RequestShape = {{ honeytail.request_shape }}
+{% endif %}
 
 ; Prefix to use on fields generated from request_shape to prevent field collision
 ; ShapePrefix =
