--- a/salt/honeytail/honeytail.conf
+++ b/salt/honeytail/honeytail.conf
@@ -42,7 +42,9 @@ DebugOut = {{ 'true' if honeytail.get('debug') else 'false' }}
 ; ScrubFields =
 
 ; Do not send the field to Honeycomb. May be specified multiple times
-; DropFields =
+{% for field in honeytail.get('drop_fields', []) -%}
+DropFields = {{ field }}
+{% endfor %}
 
 ; Add the field to every event. Field should be key=val. May be specified multiple times
 AddFields = hostname={{ grains.id }}
