honeytail: Enable setting request patterns

--- a/salt/honeytail/honeytail.conf
+++ b/salt/honeytail/honeytail.conf
@@ -64,7 +64,9 @@ RequestShape = {{ honeytail.request_shape }}
 ; ShapePrefix =
 
 ; A pattern for the request path on which to base the derived request_shape. May be specified multiple times. Patterns are considered in order; first match wins.
-; RequestPattern =
+{% for pattern in honeytail.get('request_patterns', []) -%}
+RequestPattern = {{ pattern }}
+{% endfor %}
 
 ; How to parse the request query parameters. 'whitelist' means only extract listed query keys. 'all' means to extract all query parameters as individual columns
 ; RequestParseQuery = whitelist
