Remove blank line from honeytail config

--- a/salt/honeytail/honeytail.conf
+++ b/salt/honeytail/honeytail.conf
@@ -56,7 +56,7 @@ AddFields = {{ grain }}={{ grains[grain] }}
 ; DAMapFile =
 
 ; Identify a field that contains an HTTP request of the form 'METHOD /path HTTP/1.x' or just the request path. Break apart that field into subfields that contain components. May be specified multiple times. Defaults to 'request' when using the nginx parser
-{% if 'request_shape' in honeytail %}
+{% if 'request_shape' in honeytail -%}
 RequestShape = {{ honeytail.request_shape }}
 {% endif %}
 
