Add basic rate limit functionality

--- a/salt/nginx/nginx.conf
+++ b/salt/nginx/nginx.conf
@@ -210,6 +210,8 @@ http {
   }
   {% endif %}
 
+  include rate_limit_zones.conf;
+
   # Enable caching of proxy upstream responses
   proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=proxy_upstream_cache:1m max_size=500m inactive=30m;
 
