Set 429 with custom error when limited

--- a/salt/nginx/nginx.conf
+++ b/salt/nginx/nginx.conf
@@ -210,6 +210,8 @@ http {
   }
   {% endif %}
 
+  limit_req_log_level warn;
+  limit_req_status 429;
   include rate_limit_zones.conf;
 
   # Enable caching of proxy upstream responses
