--- a/salt/memcached/memcached.conf
+++ b/salt/memcached/memcached.conf
@@ -22,7 +22,7 @@ logfile /var/log/memcached.log
 -m {{ memory }}
 
 # Default connection port is 11211
--p 11211
+-p {{ port }}
 
 # Run the daemon as root. The start-memcached will default to running as root if no
 # -u command is present in this config file
