Move rate limit zones into generic http extension point

--- a/salt/nginx/nginx.conf
+++ b/salt/nginx/nginx.conf
@@ -217,10 +217,10 @@ http {
 
   limit_req_log_level warn;
   limit_req_status 429;
-  include rate_limit_zones.conf;
 
   # Enable caching of proxy upstream responses
   proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=proxy_upstream_cache:1m max_size={{ nginx.cache_max_size }} inactive={{ nginx.cache_inactive }};
 
+  include http-config/*;
   include sites-enabled/*;
 }
