Default to lowercasing the XFO header

--- a/salt/tls-terminator/security_header_maps.conf
+++ b/salt/tls-terminator/security_header_maps.conf
@@ -1,5 +1,5 @@
 map $upstream_http_x_frame_options $tlst_frame_options {
-    '' DENY;
+    '' deny;
 }
 
 map $upstream_http_x_xss_protection $tlst_xss_protection {
