unattended-upgrades: Add banner to listchanges.conf

--- a/salt/unattended-upgrades/listchanges.conf
+++ b/salt/unattended-upgrades/listchanges.conf
@@ -1,3 +1,7 @@
+##################################################
+# File managed by salt state unattended-upgrades #
+##################################################
+
 [apt]
 frontend=pager
 email_address={{ salt['pillar.get']('unattended-upgrades:mail', 'root') }}
