--- a/salt/nginx/nginx.conf
+++ b/salt/nginx/nginx.conf
@@ -143,7 +143,7 @@ http {
 
   # Note that TLSv1.1 and TLSv1.2 are immune to the beast attack but only work with OpenSSL v1.0.1 and higher and has limited client support.
   # ciphersuite from https://wiki.mozilla.org/Security/Server_Side_TLS#Recommended_Ciphersuite
-  ssl_protocols              TLSv1 TLSv1.1 TLSv1.2;
+  ssl_protocols              TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
   ssl_ciphers                {{ ':'.join([
     'ECDHE-ECDSA-AES256-GCM-SHA384',
     'ECDHE-RSA-AES256-GCM-SHA384',
