Include seconds in nginx rotated logs

--- a/salt/nginx/logrotate.conf
+++ b/salt/nginx/logrotate.conf
@@ -22,7 +22,7 @@
         # Now we know that files have been reloaded by nginx and can be
         # compressed safely
         find /var/log/nginx -name "*COMPRESS-ME-*" | while read source_file; do
-            time_id=$(date -u +"%Y-%m-%dT%H:%MZ")
+            time_id=$(date -u +"%Y-%m-%dT%H:%M:%SZ")
             destination=$(echo $source_file | sed s/COMPRESS-ME-.*/$time_id/)
             mv "$source_file" "$destination"
             gzip "$destination"
