Enable changing nginx logrotate schedule

--- a/salt/nginx/logrotate.conf
+++ b/salt/nginx/logrotate.conf
@@ -1,9 +1,10 @@
 {% set nginx = pillar.get('nginx', {}) -%}
 {% set dump_to_s3 = nginx.get('dump_to_s3', False) -%}
 {% set target_bucket = nginx.get('s3_bucket') -%}
+{% set schedule = nginx.get('logrotate_schedule', 'daily') -%}
 
 /var/log/nginx/*.log {
-    daily
+    {{ schedule }}
     missingok
     rotate 10
     {% if dump_to_s3 %}
