--- a/salt/nginx/nginx.conf
+++ b/salt/nginx/nginx.conf
@@ -184,6 +184,13 @@ http {
   # Set ephemeral DH key parameters to a larger size than default (default 1024)
   ssl_dhparam ssl/dhparam.pem;
 
+  {% if 'ssl_session_tickets' in nginx %}
+  # Set the TSL session resumption tickets to be able to resume sessions across servers
+  {% for _ in nginx.get('ssl_session_tickets', []) -%}
+  ssl_session_ticket_key /etc/nginx/private/ssl_session_ticket_{{ loop.index }}.key;
+  {% endfor %}
+  {% endif %}
+
   # Optimize SSL by caching session parameters. This cuts down on the number of expensive SSL handshakes.
   # The handshake is the most CPU-intensive operation, and by default it is re-negotiated on every new/parallel connection.
   # By enabling a cache (of type "shared between all Nginx workers"), we tell the client to re-use the already negotiated state.
