Set nginx resolver by default

--- a/salt/nginx/nginx.conf
+++ b/salt/nginx/nginx.conf
@@ -141,6 +141,10 @@ http {
   # a specific directory, or on an individual server{} level.
   # gzip_static on;
 
+  # Specify how to resolve hostnames
+  resolver {{ ' '.join(salt['grains.get']('dns:nameservers')) }};
+  resolver_timeout {{ nginx.get('resolver_timeout') }};
+
   # Note that TLSv1.1 and TLSv1.2 are immune to the beast attack but only work with OpenSSL v1.0.1 and higher and has limited client support.
   # ciphersuite from https://wiki.mozilla.org/Security/Server_Side_TLS#Recommended_Ciphersuite
   ssl_protocols              TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
