Enable specifying ntp interfaces

--- a/salt/ntp/ntp.conf
+++ b/salt/ntp/ntp.conf
@@ -57,3 +57,7 @@ restrict ::1
 # next lines.  Please do this only if you trust everybody on the network!
 #disable auth
 #broadcastclient
+
+{% for interface_spec in salt['pillar.get']('ntp:interfaces', []) -%}
+interface {{ interface_spec }}
+{% endfor %}
