Ensure nginx always have some resolvers

--- a/salt/nginx/nginx.conf
+++ b/salt/nginx/nginx.conf
@@ -142,7 +142,12 @@ http {
   # gzip_static on;
 
   # Specify how to resolve hostnames
-  resolver {{ ' '.join(salt['grains.get']('dns:nameservers')) }};
+  {% set nameservers = salt['grains.get']('dns:nameservers') -%}
+  {% if not nameservers -%}
+      {# Ensure we always have some servers defined, otherwise nginx will fail to start -#}
+      {% set nameservers = ['8.8.8.8', '8.8.4.4'] -%}
+  {% endif -%}
+  resolver {{ ' '.join(nameservers) }};
   resolver_timeout {{ nginx.get('resolver_timeout') }};
 
   # Note that TLSv1.1 and TLSv1.2 are immune to the beast attack but only work with OpenSSL v1.0.1 and higher and has limited client support.
