Enable setting security.txt redirects

--- a/salt/nginx/nginx.conf
+++ b/salt/nginx/nginx.conf
@@ -216,7 +216,16 @@ http {
   server {
     listen [::]:80 default_server ipv6only=off;
     server_name badsubdomainprobably "";
-    return 444;
+
+    location / {
+      return 444;
+    }
+
+    {% if nginx.security_txt %}
+    location /.well-known/security.txt {
+      return 303 '{{ nginx.security_txt }}';
+    }
+    {% endif %}
   }
   {% endif %}
 
@@ -227,7 +236,16 @@ http {
     server_name httpsbadsubdomain "";
     ssl_certificate ssl/default.crt;
     ssl_certificate_key private/default.key;
-    return 444;
+
+    location / {
+      return 444;
+    }
+
+    {% if nginx.security_txt %}
+    location /.well-known/security.txt {
+      return 303 '{{ nginx.security_txt }}';
+    }
+    {% endif %}
   }
   {% endif %}
 
