Fix crash if missing security_txt

--- a/salt/nginx/nginx.conf
+++ b/salt/nginx/nginx.conf
@@ -221,7 +221,7 @@ http {
       return 444;
     }
 
-    {% if nginx.security_txt %}
+    {% if 'security_txt' in nginx %}
     location /.well-known/security.txt {
       return 303 '{{ nginx.security_txt }}';
     }
@@ -241,7 +241,7 @@ http {
       return 444;
     }
 
-    {% if nginx.security_txt %}
+    {% if 'security_txt' in nginx %}
     location /.well-known/security.txt {
       return 303 '{{ nginx.security_txt }}';
     }
