Fix some ES log paths

--- a/salt/elasticsearch/elasticsearch.yml
+++ b/salt/elasticsearch/elasticsearch.yml
@@ -39,7 +39,7 @@ path.data: /var/lib/elasticsearch
 #
 # Path to log files:
 #
-path.logs: /var/lib/elasticsearch
+path.logs: /var/log/elasticsearch
 #
 # ----------------------------------- Memory -----------------------------------
 #
