Enable setting eviction policy

--- a/salt/redis/redis.conf
+++ b/salt/redis/redis.conf
@@ -1,4 +1,4 @@
-{% set redis = pillar.get('redis', {}) -%}
+{% from 'redis/map.jinja' import redis with context -%}
 
 ####################################
 # File managed by salt state redis #
@@ -602,7 +602,7 @@ requirepass {{ redis.password }}
 #
 # The default is:
 #
-# maxmemory-policy noeviction
+maxmemory-policy {{ redis['maxmemory-policy'] }}
 
 # LRU, LFU and minimal TTL algorithms are not precise algorithms but approximated
 # algorithms (in order to save memory), so you can tune it for speed or
