Enable setting redis password from another pillar

--- a/salt/redis/redis.conf
+++ b/salt/redis/redis.conf
@@ -512,6 +512,8 @@ replica-priority 100
 #
 {% if 'password' in redis -%}
 requirepass {{ redis.password }}
+{% elif 'password_pillar' in redis -%}
+requirepass {{ salt['pillar.get'](redis['password_pillar']) }}
 {% endif %}
 
 # Command renaming.
