Add rabbitmq.management state

--- a/salt/rabbitmq/rabbitmq.conf
+++ b/salt/rabbitmq/rabbitmq.conf
@@ -1,3 +1,5 @@
+{% from 'rabbitmq/map.jinja' import rabbitmq with context -%}
+
 #######################################
 # File managed by salt state rabbitmq #
 #######################################
@@ -560,10 +562,10 @@
 ## HTTPS listener settings.
 ## See https://rabbitmq.com/management.html and https://rabbitmq.com/ssl.html for details.
 ##
-# management.ssl.port       = 15671
+management.ssl.port       = {{ rabbitmq.get('management_ssl_port', 15671) }}
 # management.ssl.cacertfile = /path/to/ca_certificate.pem
-# management.ssl.certfile   = /path/to/server_certificate.pem
-# management.ssl.keyfile    = /path/to/server_key.pem
+management.ssl.certfile   = /etc/rabbitmq/cert.pem
+management.ssl.keyfile    = /etc/rabbitmq/key.pem
 
 ## More TLS options
 # management.ssl.honor_cipher_order   = true
@@ -572,7 +574,7 @@
 # management.ssl.secure_renegotiate   = true
 
 ## Supported TLS versions
-# management.ssl.versions.1 = tlsv1.2
+management.ssl.versions.1 = tlsv1.2
 # management.ssl.versions.2 = tlsv1.1
 
 ## Cipher suites the server is allowed to use
