Enable running rabbit management over plain http

--- a/salt/rabbitmq/rabbitmq.conf
+++ b/salt/rabbitmq/rabbitmq.conf
@@ -549,7 +549,9 @@
 ## HTTP listener and embedded Web server settings.
 # ## See https://rabbitmq.com/management.html for details.
 #
-# management.tcp.port = 15672
+{% if rabbitmq.management_plaintext -%}
+management.tcp.port = {{ rabbitmq.management_port }}
+{% endif -%}
 # management.tcp.ip   = 0.0.0.0
 #
 # management.tcp.shutdown_timeout   = 7000
@@ -562,7 +564,8 @@
 ## HTTPS listener settings.
 ## See https://rabbitmq.com/management.html and https://rabbitmq.com/ssl.html for details.
 ##
-management.ssl.port       = {{ rabbitmq.get('management_ssl_port', 15671) }}
+{% if not rabbitmq.management_plaintext -%}
+management.ssl.port       = {{ rabbitmq.management_ssl_port }}
 # management.ssl.cacertfile = /path/to/ca_certificate.pem
 management.ssl.certfile   = /etc/rabbitmq/cert.pem
 management.ssl.keyfile    = /etc/rabbitmq/key.pem
@@ -576,6 +579,7 @@ management.ssl.keyfile    = /etc/rabbitmq/key.pem
 ## Supported TLS versions
 management.ssl.versions.1 = tlsv1.2
 # management.ssl.versions.2 = tlsv1.1
+{%- endif %}
 
 ## Cipher suites the server is allowed to use
 # management.ssl.ciphers.1 = ECDHE-ECDSA-AES256-GCM-SHA384
